changes to style

--- a/index.html
+++ b/index.html
@@ -7,16 +7,10 @@
     <title>CLARK GAMES</title>
 </head>
 <body>
-    <center>
-
-        <div id="tictactoe">
-            <img src="tictactoe.jpg" alt="tic tac toe">
-            <div style="font-weight: bold; font-size: 20px;">
-                <p>TIC TAC TOE</p>
-                <a href="tictactoe\index.html"><button>PLAY</button></a>
-            </div>
-        </div>  
-    </center>
-<script src="main.js"></script>
+    <header>
+        <a href="">HOME</a>
+        <a href="">GAMES</a>
+        <a href="">ABOUT</a>
+    </header>
 </body>
 </html>
