--- a/GAMES/games.html
+++ b/GAMES/games.html
@@ -16,7 +16,7 @@
         <img src="tictactoe.jpg" alt="tic tac toe">
         <div style="font-weight: bold; font-size: 20px;">
             <p>TIC TAC TOE</p>
-            <a href="tictactoe\index.html"><button>PLAY</button></a>
+            <a href="/tictactoe/index.html"><button>PLAY</button></a>
         </div>
     </div>  
 <script src="main.js"></script>
