--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -7,7 +7,7 @@
     <title>TIC TAC TOE</title>
 </head>
 <body>
-    <a href="../index.html"><button id="otherGames">OTHER GAMES</button></a>
+    <a href="/GAMES/games.html"><button id="otherGames">OTHER GAMES</button></a>
         <div id="gameContainer">
             <h1>Tic Tac Toe </h1>
             <div id="cellContainer">
