--- a/GAMES/index.html
+++ b/GAMES/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
 <header>
-    <a href="">HOME</a>
-    <a href="">GAMES</a>
-    <a href="">ABOUT</a>
+    <a href="../index.html">HOME</a>
+    <a href="index.html">GAMES</a>
+    <a href="../ABOUT/index.html">ABOUT</a>
 </header>
     <div id="tictactoe">
         <img src="tictactoe.jpg" alt="tic tac toe">
         <div style="font-weight: bold; font-size: 20px;">
             <p>TIC TAC TOE</p>
-            <a href="/tictactoe/index.html"><button>PLAY</button></a>
+            <a href="tictactoe/index.html"><button>PLAY</button></a>
         </div>
     </div>  
 <script src="main.js"></script>
