--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header>
-        <a href="/index.html">HOME</a>
-        <a href="/GAMES/games.html">GAMES</a>
-        <a href="/ABOUT/index.html">ABOUT</a>
+        <a href="index.html">HOME</a>
+        <a href="GAMES/index.html">GAMES</a>
+        <a href="ABOUT/index.html">ABOUT</a>
     </header>
 </body>
 </html>
